# libcomm

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  config.cmake  dependency.cmake  pkg.yaml
.chglog/: config.yml
docs/zh-CN/: 01-domain.md  02-forward-comm.md  README.md
src/: CMakeLists.txt  app.cpp  app.h  comm-config.cmake.in  comm.hpp  comm.inl  comm_forwarding_region.cc  comm_forwarding_region.h  main.cpp  packer.h  types_define.h
src/comm/: comm.hpp  comm.inl  packer.h  region_packer.h  types_define.h
src/comm/domain/: bcc_domain.cc  bcc_domain.h  builder.h  builder.inl  cartesian_context.cc  cartesian_context.h  colored_domain.cc  colored_domain.h  domain.cc  domain.h  region.hpp  region.inl
src/comm/preset/: comm_forwarding_region.cc  comm_forwarding_region.h  sector_forwarding_direction.h  sector_forwarding_region.cc  sector_forwarding_region.h
src/comm/topology/: cart_3d_node_affinity.cc  cart_3d_node_affinity.h
src/domain/: bcc_domain.cc  bcc_domain.h  builder.h  builder.inl  colored_domain.cc  colored_domain.h  domain.cc  domain.cpp  domain.h  region.hpp  region.inl
src/preset/: comm_forwarding_region.cc  comm_forwarding_region.h  sector_forwarding_direction.h  sector_forwarding_region.cc  sector_forwarding_region.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  main.cpp  region_packer_test.cpp  test_config.h.in
tests/unit/domain/: bcc_domain_test.cpp  build_domain_3d_const.cpp  colored_domain_test.cpp  domain_test.cpp  domain_test_utils.cpp  domain_test_utils.h  region_test.cpp
tests/unit/preset/: comm_forwarding_region_test.cpp  sector_forwarding_direction_test.cpp  sector_forwarding_region_test.cpp
